# fwht_simd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bertrand_changes.diff  cmake_format_conf.py  fwht_simd.code-workspace
apps/: bench_fwht.cpp  nb_sc_decoder  nb_sc_decoder copy.cpp  nb_sc_decoder.cpp  nb_sc_decoder2.cpp  nb_sc_decoder4.cpp  nb_sc_decoder_abd  nb_sc_decoder_abd.cpp  simulator.cpp  simulator_dec1.cpp  simulator_dec2.cpp  simulator_dec3.cpp  simulator_dec4.cpp  test_function_f.cpp
apps/src/: const_config_GF64_N64.hpp
src/: CMakeLists.txt  const_config_GF64_N64.hpp  f_function.hpp  frozen_tree.hpp  fwht_avx2.hpp  fwht_avx2.hxx  fwht_neon.hxx  fwht_x86.hxx  g_function.hpp  leaf_node.hpp  main.cpp  middle_node.hpp  structure.hpp  tools.hpp  top_node.hpp  vect_neon.hpp
src/definitions/: code.hpp  const_config_GF64_N64.hpp  custom_types.hpp
src/definitions/codes/: N1024_GF64.hpp  N128_GF64.hpp  N16_GF64.hpp  N256_GF64.hpp  N32_GF64.hpp  N512_GF64.hpp  N64_GF1024.hpp  N64_GF128.hpp  N64_GF16.hpp  N64_GF256.hpp  N64_GF32.hpp  N64_GF512.hpp  N64_GF64.hpp  N64_GF8.hpp  N8_GF64.hpp
src/demodulator/: demodulator.hpp
src/encoder/: encoder_1.hpp  polar_encoder.hpp
src/f_function/: f_function.hpp
src/features/: archi.hpp
src/features/argmax/: argmax.hpp  argmax_avx2.hpp  argmax_neon.hpp  argmax_x86.hpp
src/features/fwht/: bench_fwht.cpp  fwht.hpp  fwht_avx2.hpp  fwht_neon.hpp  fwht_norm.hpp  fwht_norm_avx2.hpp  fwht_norm_neon.hpp  fwht_norm_pb.hpp
src/features/normalize/: normalize.hpp
src/features/vec_cplx_max/: vec_cplx_max.cpp  vec_cplx_max.hpp
src/features/vec_cplx_max_index/: vec_cplx_max_index.cpp  vec_cplx_max_index.hpp  vec_cplx_max_index_neon.hpp  vec_cplx_max_index_x86.hpp
src/features/vec_cplx_max_indexes/: vec_cplx_max_indexes.cpp  vec_cplx_max_indexes.hpp  vec_cplx_max_indexes_neon.hpp  vec_cplx_max_indexes_x86.hpp
src/fwht/: bench_fwht.cpp  fwht.hpp  fwht_avx2.hpp  fwht_neon.hpp  fwht_norm.hpp  fwht_norm_avx2.hpp  fwht_norm_neon.hpp  fwht_norm_x86.hpp  fwht_simd.code-workspace  fwht_x86.hpp
src/g_function/: g_function.hpp
src/hadamard/: hadamard_64.hpp
src/node_functions/: f_function.hpp  g_function.hpp  test_function_f.cpp
src/nodes/: decoder_naive.cpp  decoder_naive.hpp  decoder_naive_pruning.cpp  decoder_naive_pruning.hpp  leaf_node.hpp  middle_node.hpp  middle_node_rate0.hpp  middle_node_rate1.hpp  middle_node_with_pruning.hpp  top_node.hpp  top_node_with_pruning.hpp
src/pruning/: decoder_pruned.cpp  decoder_pruned.hpp  decoder_specialized.cpp  decoder_specialized.hpp  f_function_freq_in.hpp  f_function_proba_in.hpp  g_function_freq_in.hpp  g_function_proba_in.hpp  leaf_node_after_f.hpp  leaf_node_after_g.hpp  middle_node_after_f.hpp  middle_node_after_g.hpp  top_node_v2.hpp
src/pruning/f_function/: f_function_freq_in.hpp  f_function_proba_in.hpp
src/pruning/g_function/: g_function_freq_in.hpp  g_function_proba_in.hpp
src/pruning/leaf/: leaf_node_after_f.hpp  leaf_node_after_g.hpp  leaf_node_rate_0.hpp
src/pruning/node/: middle_node_after_f.hpp  middle_node_after_g.hpp  middle_node_pruned_after_f.hpp  middle_node_pruned_after_g.hpp  middle_node_pruned_rate_0.hpp  middle_node_pruned_rate_1_after_f.hpp  middle_node_pruned_rate_1_after_g.hpp  middle_node_pruned_rep_after_f.hpp  middle_node_pruned_rep_after_g.hpp
src/utilities/: utility_functions.cpp  utility_functions.hpp
